--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <a href="" class="link" target="_blank">
                 <i class='bx bxl-facebook'></i>
             </a>
-            <a href="" style="background: #C13584;" class="link" target="_blank">
+            <a href="https://www.instagram.com/z_a_n_here/" style="background: #C13584;" class="link" target="_blank">
                 <i class='bx bxl-instagram'></i>
             </a>
-            <a href="" style="background: #25D366;" class="link" target="_blank">
+            <a href="https://wa.link/xptvj7" style="background: #25D366;" class="link" target="_blank">
                 <i class='bx bxl-whatsapp'></i>
             </a>
             <a href="" style="background: #1DA1F2;" class="link" target="_blank">
